--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -37,6 +37,12 @@
                     <a class="dropdown-item" href="{{ path('admin-pages-create') }}"><span class="oi oi-plus" title="icon name" aria-hidden="true"></span> Manage Pages</a>
                 </div>
             </li>
+            <li class="nav-item dropdown{% if selectedNav is defined and selectedNav == 'admin-images' %} active{% endif %}">
+                <a href="#" class="nav-link dropdown-toggle" id="navbarImagesDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Images</a>
+                <div class="dropdown-menu" aria-labelledby="navbarImagesDropdownMenuLink">
+                    <a class="dropdown-item" href="{{ path('admin-images-create') }}"><span class="oi oi-plus" title="icon name" aria-hidden="true"></span> Upload Images</a>
+                </div>
+            </li>
         </ul>
     </div>
 </nav>
