Set env variable for image cdn and replaced hardcoded links

--- a/templates/admin/pages.create.html.twig
+++ b/templates/admin/pages.create.html.twig
@@ -407,7 +407,7 @@
             $(ele).closest('.card').find(':radio[checked="checked"]').closest('label').addClass('active');
             $(ele).closest('.card').addClass('border-success');
             if ($(ele).closest('.card').find(':radio:checked').length) {
-                $(ele).closest('.panoramic_image').find('select').val($(ele).closest('.card').find(':radio:checked').val());
+                $(ele).closest('.form-group').find('select').val($(ele).closest('.card').find(':radio:checked').val());
             }
         }
 
