Added images/list page

--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -41,6 +41,7 @@
                 <a href="#" class="nav-link dropdown-toggle" id="navbarImagesDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Images</a>
                 <div class="dropdown-menu" aria-labelledby="navbarImagesDropdownMenuLink">
                     <a class="dropdown-item" href="{{ path('admin-images-create') }}"><span class="oi oi-plus" title="icon name" aria-hidden="true"></span> Upload Images</a>
+                    <a class="dropdown-item" href="{{ path('admin-images-list') }}"><span class="oi oi-aperture" title="icon name" aria-hidden="true"></span> Manage Images</a>
                 </div>
             </li>
         </ul>
