--- a/templates/admin/images.list.html.twig
+++ b/templates/admin/images.list.html.twig
@@ -30,8 +30,13 @@
                                     {%  set index = index + 1 %}
                                 {% endif %}
                                 <tr{% if row.Metadata.filename is defined %} data-row-id="{{ row.Key }}"{% elseif row.Metadata.parent is defined %} data-parent="{{ row.Metadata.parent }}"{% endif %}>
-                                    <td scope="row">{{ index }}</td>
-                                    <td>{% if row.Metadata.filename is not defined %}&nbsp;{% else %}{{ row.Metadata.filename }}{% endif %}</td>
+                                    <td scope="row">{% if row.Metadata.filename is defined %}{{ index }}{% endif %}</td>
+                                    <td>
+                                        <div style="width: 50px; height:50px; background-image: url({{ row.CdnUrl }}); background-repeat: no-repeat; background-position: center center; -webkit-background-size: cover; -moz-background-size: cover; background-size: cover; -o-background-size: cover; float: left; margin-right:10px; "></div>
+                                        {% if row.Metadata.filename is defined %}
+                                            {{ row.Metadata.filename }}
+                                        {% endif %}
+                                    </td>
                                     <td>{% if row.Key matches '/\-\-xs\./' %}Extra small devices<br/>
                                             <small>(portrait phones, less than 576px)
                                             </small>{% elseif row.Key matches '/\-\-sm\./' %}Small devices<br/>
@@ -42,7 +47,7 @@
                                             <small>(desktops, 992px and up)</small>{% else %}Extra large devices<br/>
                                             <small>(large desktops, 1200px and up)</small>{% endif %}</td>
                                     <td title="{{ row.Size }} B">{{ filesize.bytesToSize(row.Size) }}</td>
-                                    <td>&nbsp;</td>
+                                    <td><a href="{{ row.CdnUrl }}"><span class="oi oi-cloud-download"></span></a></td>
                                 </tr>
                             {% endfor %}
                         {% else %}
@@ -64,8 +69,16 @@
 <script type="text/javascript">
     $('tr[data-parent]').hide();
 
-    $('table.table').on('click', 'tr[data-row-id]', function(e) {
-        $(this).closest('table').find('tr[data-parent="' + $(this).data('row-id') + '"]').toggle();
-    })
+    $('table.table').on('click', 'tr[data-row-id] td', function(e) {
+        if ($(this).find('span.oi').length === 0) {
+            $(this).closest('table').find('tr[data-parent="' + $(this).closest('tr').data('row-id') + '"]').toggle();
+        }
+    });
+
+    $('table.table').on('mouseover', 'tr td', function(e) {
+        if ($(this).find('span.oi').length === 0) {
+            $(this).css('cursor', 'pointer');
+        }
+    });
 </script>
 {% endblock %}
