--- a/templates/data_collector/redis.html.twig
+++ b/templates/data_collector/redis.html.twig
@@ -32,3 +32,36 @@
        show a section in the web profiler #}
     {{ include('@WebProfiler/Profiler/toolbar_item.html.twig', { link: true }) }}
 {% endblock %}
+
+{% block menu %}
+    <span class="label">
+        <span class="icon">{{ include('data_collector/svg/redis.svg') }}</span>
+        <strong>Redis Requests</strong>
+    </span>
+{% endblock %}
+
+{% block panel %}
+    <h1>Redis</h1>
+
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>Action</th>
+            <th>Data</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% if collector.data|length > 0 %}
+            {% for data in collector.data %}
+                <tr>
+                    <td>{{ data._method }}</td>
+                    <td>{{ dump(data) }}</td>
+                </tr>
+            {% endfor %}
+        {% else %}
+            <tr><td colspan="2" align="center">No Data</td></tr>
+        {% endif %}
+        </tbody>
+    </table>
+
+{% endblock %}
