Enabled creatimng new Carousel

--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -57,12 +57,12 @@
 
 {% for message in app.flashes('admin-notice') %}
     <div class="alert alert-info" role="alert">
-        {{ message }}
+        {{ message | raw }}
     </div>
 {% endfor %}
 {% for message in app.flashes('admin-success') %}
     <div class="alert alert-success" role="alert">
-        {{ message }}
+        {{ message | raw }}
     </div>
 {% endfor %}
 {% block body %}{% endblock %}
