Enabled edit of carousel

--- a/templates/admin/carousel.list.html.twig
+++ b/templates/admin/carousel.list.html.twig
@@ -1,1 +1,33 @@
 {% extends 'admin.html.twig' %}
+
+{% block body %}
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1 class="display-3">Manage carousels</h1>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <table class="table table-striped">
+                {% for row in carousels %}
+                <tr>
+                    <td>{{ row.name }}</td>
+                    <td>{{ row.description }}</td>
+                    <td>
+                        <a href="{{ path('admin-carousel-edit', {'id': row.id}) }}"><button class="btn btn-default"><i class="oi oi-pencil"></i> Edit</button></a>
+                        <form method="post" action="{{ path('admin-carousel-delete', {'id': row.id}) }}" class="form-inline">
+                            <button type="submit" class="btn btn-link text-danger">
+                                <i class="oi oi-trash"></i> Delete
+                            </button>
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
