--- a/templates/admin/carousel.edit.html.twig
+++ b/templates/admin/carousel.edit.html.twig
@@ -10,7 +10,9 @@
 
                 <div class="jumbotron">
                     {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
-
+                    {{ form_row(form.name) }}
+                    {{ form_row(form.description) }}
+                    {{ form_row(form.send, {label: 'Edit Carousel'}) }}
                     {{ form_end(form) }}
                 </div>
             </div>
