--- a/templates/admin/carousel.edit.html.twig
+++ b/templates/admin/carousel.edit.html.twig
@@ -1,40 +1,20 @@
 {% extends 'admin.html.twig' %}
-{% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
-{% form_theme newSlideForm with ['bootstrap_4_horizontal_layout.html.twig', 'admin/form-themes/fields.html.twig'] %}
+{% form_theme form with ['bootstrap_4_horizontal_layout.html.twig', 'admin/form-themes/fields.html.twig'] %}
 
 
 {% block body %}
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1 class="display-3">Edit carousel</h1>
-
-                {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
-                {{ form_row(form.name) }}
-                {{ form_row(form.description) }}
-                {{ form_row(form.send, {label: 'Edit Carousel'}) }}
-                {{ form_end(form) }}
-
-                {% for carouselSlideForm in carouselSlideForms %}
-                    <h3 class="display-4">Edit existing slide</h3>
-                    {{ form_start(carouselSlideForm, {'attr': {'novalidate': 'novalidate'}}) }}
-
-                    {{ form_end(carouselSlideForm) }}
-                {% endfor %}
-
-            </div>
-        </div>
-    </div>
-
-
-
-    <div class="container">
-        <div class="row">
-            <div class="col">
                 <h3 class="display-4">Add new slide</h3>
 
-                {{ form_start(newSlideForm, {'attr': {'novalidate': 'novalidate'}}) }}
-                {{ form_end(newSlideForm) }}
+                {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+                {%- for key, field in form.title -%}
+                    {{ form_row(form.title[key]) }}
+                    {{ form_row(form.description[key]) }}
+                    {{ form_row(form.image[key]) }}
+                {%- endfor -%}
+                {{ form_end(form) }}
             </div>
         </div>
     </div>
