Removed hardcoded block of twig image_carousel

--- a/templates/pages/page.html.twig
+++ b/templates/pages/page.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    {{ page|replace({'#search-form#': block('search_form') })|replace({'#contact-form#': block('contact_form')})|replace({'#image-carousel#': block('image_carousel')})|raw }}
+    {{ page|replace({'#search-form#': block('search_form') })|replace({'#contact-form#': block('contact_form')})|raw }}
 {% endblock %}
 {% block stylesheets %}
     {{ styles|raw }}
